--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ volumes:
 services:
     docker-grav:
         image: grav-xdebug:latest
-        container_name: xdebug
+        container_name: grav-xdebug
         ports:
-            - "8000:80"
+            - "8080:80"
         restart: always
         volumes:
             - ./grav-data:/var/www/html:rw
