--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-
----
-version: "2"
 volumes:
     grav-data:
       driver: local
@@ -15,9 +12,8 @@ services:
         container_name: grav-xdebug
         ports:
             - "8080:80"
-        restart: always
         volumes:
-            - ./grav-data:/var/www/html:rw
+            - ./grav-data/grav:/var/www/html/grav:rw
             - ./logs/xdebug:/logs/xdebug
             - ./xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
         
